welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:2: error: not found: value a
	if(a<5 || b<5) {
           ^teaParty:4: error: not found: value a
	} else if (a>=b*2 || b>=a*2) {
                   ^