welcome.lessons.welcome.bat.bool2.TeaParty.scala.code
def teaParty(tea:Int, candy:Int): Int = {
	if(a<5 || b<5) {
		return 0
	} else if (a>=b*2 || b>=a*2) {
		return 2
	} else {
		return 1
	}
}